<resources>
    <string name="app_name">ApproachMonster</string>
    <string name="map_id">e8cdcd654f55f6f9</string>
    <string name="map_style">[   {     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#212121\"       }     ]   },   {     \"elementType\": \"labels\",     \"stylers\": [       {         \"visibility\": \"off\"       }     ]   },   {     \"elementType\": \"labels.icon\",     \"stylers\": [       {         \"visibility\": \"off\"       }     ]   },   {     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#757575\"       }     ]   },   {     \"elementType\": \"labels.text.stroke\",     \"stylers\": [       {         \"color\": \"#212121\"       }     ]   },   {     \"featureType\": \"administrative\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#757575\"       }     ]   },   {     \"featureType\": \"administrative.country\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#9e9e9e\"       }     ]   },   {     \"featureType\": \"administrative.land_parcel\",     \"stylers\": [       {         \"visibility\": \"off\"       }     ]   },   {     \"featureType\": \"administrative.locality\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#bdbdbd\"       }     ]   },   {     \"featureType\": \"poi\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#757575\"       }     ]   },   {     \"featureType\": \"poi.park\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#181818\"       }     ]   },   {     \"featureType\": \"poi.park\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#616161\"       }     ]   },   {     \"featureType\": \"poi.park\",     \"elementType\": \"labels.text.stroke\",     \"stylers\": [       {         \"color\": \"#1b1b1b\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"geometry.fill\",     \"stylers\": [       {         \"visibility\": \"off\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"geometry.stroke\",     \"stylers\": [       {         \"visibility\": \"off\"       }     ]   },   {     \"featureType\": \"road\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#8a8a8a\"       }     ]   },   {     \"featureType\": \"road.arterial\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#373737\"       }     ]   },   {     \"featureType\": \"road.highway\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#3c3c3c\"       }     ]   },   {     \"featureType\": \"road.highway.controlled_access\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#4e4e4e\"       }     ]   },   {     \"featureType\": \"road.local\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#616161\"       }     ]   },   {     \"featureType\": \"transit\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#757575\"       }     ]   },   {     \"featureType\": \"transit.station.airport\",     \"elementType\": \"geometry.fill\",     \"stylers\": [       {         \"color\": \"#4489b1\"       },       {         \"visibility\": \"on\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"geometry\",     \"stylers\": [       {         \"color\": \"#000000\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"geometry.fill\",     \"stylers\": [       {         \"color\": \"#FF2196F3\"       },       {         \"visibility\": \"on\"       }     ]   },   {     \"featureType\": \"water\",     \"elementType\": \"labels.text.fill\",     \"stylers\": [       {         \"color\": \"#3d3d3d\"       }     ]   } ]</string>
    <string name="header_title">Approach Master</string>
    <string name="info">Info</string>
    <string name="airports">Airports</string>
    <string name="waypoints">Waypoints</string>
    <string name="vor">VOR</string>
    <string name="plus">+</string>
    <string name="ident">Ident</string>
    <string name="altitude">Altitude</string>
    <string name="flight_level">Flight Level</string>
    <string name="minus">-</string>
    <string name="direction">Direction °</string>
    <string name="speed">Speed - Kts</string>
    <string name="flight_data">Flight data</string>
    <string name="minusTen">-10</string>
    <string name="plusTen">+10</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_180_kts">180 kts</string>
    <string name="_180">180°</string>
    <string name="fl_200">FL xxx</string>
</resources>